<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nuturtle_description</name>
  <version>0.1.1</version>
  <description>The package will contain urdf files and basic debugging, testing, and visualization code for turtlebot3</description>
  <maintainer email="FionaNeylon2022@u.northwestern.edu">fionaneylon</maintainer>
  <license>APLv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

<!-- Exec Depends for the launchfiles -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>load_one.launch.py</exec_depend>
  <!-- <exec_depend>basic_purple.rviz</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
