<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="FionaNeylon2022@u.northwestern.edu">fionaneylon</maintainer>
  <license>APLv2</license>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>
  <buildtool_depend>std_srvs</buildtool_depend>
  <buildtool_depend>nuturtle_description</buildtool_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <buildtool_depend>visualization_msgs</buildtool_depend>
  <buildtool_depend>nuturtlebot_msgs</buildtool_depend>
  <buildtool_depend>turtlelib</buildtool_depend>
  <buildtool_depend>nav_msgs</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
